Add guest introduction masthead for unauthenticated users on home page
- Introduced a new guest introduction masthead that provides a short editorial welcome for unauthenticated visitors, explaining curated featured posts.
- Implemented dismiss functionality using local storage to allow users to hide the masthead.
- Updated UI elements and styles to accommodate the new masthead, ensuring a cohesive design.
- Enhanced documentation to reflect the new feature and its usage.
- Added tests to verify visibility and dismissal behavior of the masthead for both guests and signed-in users.